# DAFE-A-DS-Contests-Problems

./: .gitignore  CMakeLists.txt  LICENSE
Semester 1/: CMakeLists.txt
Semester 1/Contest 1/: first_contest.h  main.cpp
Semester 1/Contest 1/Tasks/Problemset 1/: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  1_6.cpp
Semester 1/Contest 1/Tasks/Problemset 2/: 2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp
Semester 1/Contest 1/Tasks/Problemset 3/: 3_1.cpp  3_2.cpp  3_3.cpp  3_4.cpp
Semester 1/Contest 1/Tasks/Problemset 4/: 4_1.cpp  4_2.cpp  4_3.cpp
Semester 1/Contest 1/Tasks/Problemset 5/: 5_1.cpp  5_2.cpp  5_3.cpp  5_4.cpp
Semester 1/Contest 1/Tasks/Problemset 6/: 6_1.cpp  6_2.cpp  6_3.cpp  6_4.cpp
